--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "def change_date(dataframe):\n",
     "    dataframe['date'] = pd.to_datetime(dataframe['date'])\n",
-    "    dataframe['day'] = dataframe['date'].dt.dayofweek.astype('category')\n",
+    "    dataframe['dayofweek'] = dataframe['date'].dt.dayofweek.astype('category')\n",
     "    dataframe['month'] = dataframe['month'].astype('category')\n",
     "    dataframe['hour'] = dataframe['hour'].astype('category')\n",
     "    return dataframe\n",
@@ -110,7 +110,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "sns.lineplot(data=train, x='date', y='pm2_5', hue='country')\n",
+    "sns.lineplot(data=train, x='date', y='pm2_5')\n",
     "plt.title('Jakość powietrza z podziałem na kraje')"
    ],
    "id": "c080d74ffd38ea41",
@@ -127,7 +127,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "sns.barplot(data=train, x='hour', y='pm2_5', hue='country')\n",
+    "sns.barplot(data=train, x='hour', y='pm2_5')\n",
     "plt.title('Jakość powietrza w poszczególnych godzinach z podziałem na kraje')"
    ],
    "id": "1cc187b6375c9eb4",
@@ -137,14 +137,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Wykres przedstawiający wartość pm2_5 z zależności od dnia tygodnia",
+   "source": "### Wykres przedstawiający wartość pm2_5 w zależności od dnia tygodnia",
    "id": "e4b3fd78e799e096"
   },
   {
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "sns.barplot(data=train, x='day', y='pm2_5', hue='country')\n",
+    "sns.barplot(data=train, x='dayofweek', y='pm2_5')\n",
     "plt.title('Jakość powietrza w każdym dniu tygodnia z podziałem na kraje')"
    ],
    "id": "36c6ec9520527975",
@@ -154,14 +154,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Wykres przedstawiający wartość pm2_5 z zależności od miesiąca",
+   "source": "### Wykres przedstawiający wartość pm2_5 w zależności od miesiąca",
    "id": "c018df974513e0e3"
   },
   {
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "sns.barplot(data=train, x='month', y='pm2_5', hue='country')\n",
+    "sns.barplot(data=train, x='month', y='pm2_5')\n",
     "plt.title('Jakość powietrza w każdym dniu tygodnia z podziałem na kraje')"
    ],
    "id": "18b6234a9ec5ca95",
@@ -177,7 +177,12 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "sns.heatmap(train[['month', 'day', 'hour', 'site_latitude', 'site_longitude', 'cloud_surface_albedo', 'pm2_5']].corr(), annot=True, cmap='Greys')",
+   "source": [
+    "train['site_id'] = train['site_id'].apply(lambda x: x[:2]).astype('category')\n",
+    "test['site_id'] = test['site_id'].apply(lambda x: x[:2]).astype('category')\n",
+    "\n",
+    "sns.heatmap(train[['month', 'dayofweek', 'hour', 'site_latitude', 'site_longitude', 'cloud_surface_albedo', 'site_id', 'pm2_5']].corr(), annot=True, cmap='Greys')"
+   ],
    "id": "e9964e42a6e9e51f",
    "outputs": [],
    "execution_count": null
@@ -201,7 +206,7 @@
     "from sklearn.impute import KNNImputer\n",
     "\n",
     "\n",
-    "def fill_train(column_name='site_latitude'):\n",
+    "def fill_X(column_name='site_latitude'):\n",
     "    column_values = X[column_name].unique()\n",
     "    for date in column_values:\n",
     "        for i, column in enumerate(starts_with):\n",
@@ -238,6 +243,10 @@
     "    upper_t = matrix.where(np.triu(np.ones_like(matrix, dtype=np.bool_), k=1))\n",
     "    return [col for col in upper_t.columns if any(upper_t[col] > 0.99)]\n",
     "\n",
+    "def drop_low_correlated_columns_to_pm2_5():\n",
+    "    corr = train.corr()['pm2_5'].to_frame()\n",
+    "    return corr[(corr['pm2_5'] < 0.01) & (corr['pm2_5'] > -0.01)].index.values\n",
+    "\n",
     "def subract_azimuth_zenith(dataframe):\n",
     "    zenith_columns = [zenith for zenith in dataframe.columns if 'zenith' in zenith]\n",
     "    azimuth_columns = [azimuth for azimuth in dataframe.columns if 'azimuth' in azimuth]\n",
@@ -247,22 +256,22 @@
     "        dataframe.drop(zenith_columns[i], axis=1, inplace=True)\n",
     "        dataframe.drop(azimuth_columns[i], axis=1, inplace=True)\n",
     "    return dataframe\n",
-    "        \n",
+    "\n",
     "\n",
     "test_ids = test['id']\n",
-    "train.drop(columns=['id', 'city', 'country', 'site_id', 'date'], inplace=True)\n",
-    "test.drop(columns=['id', 'city', 'country', 'site_id', 'date'], inplace=True)\n",
+    "train.drop(columns=['id', 'city', 'country', 'date'], inplace=True)\n",
+    "test.drop(columns=['id', 'city', 'country', 'date'], inplace=True)\n",
     "starts_with = train.columns.str.split('_', expand=True).levels[0].to_frame()\n",
-    "starts_with.drop(['month', 'day', 'hour', 'pm2'], inplace=True)\n",
+    "starts_with.drop(['month', 'hour', 'pm2', 'site'], inplace=True)\n",
     "starts_with = starts_with[0].tolist()\n",
     "\n",
     "imputers = [KNNImputer(n_neighbors=15, weights='distance') for _ in range(len(starts_with))]\n",
-    "X, y = train.drop(['pm2_5'], axis=1), train['pm2_5']\n",
-    "X, test = drop_high_nans(X), drop_high_nans(test)\n",
+    "train, test = drop_high_nans(train), drop_high_nans(test)\n",
     "# fill_train(), fill_test()\n",
-    "# to_drop = drop_high_correlated_columns()\n",
-    "# X, test = X.drop(columns=to_drop, axis=1), test.drop(columns=to_drop, axis=1)\n",
-    "# X, test = subract_azimuth_zenith(X), subract_azimuth_zenith(test)"
+    "# to_drop = drop_low_correlated_columns_to_pm2_5()\n",
+    "# train, test = train.drop(columns=to_drop, axis=1), test.drop(columns=to_drop, axis=1)\n",
+    "# train, test = subract_azimuth_zenith(train), subract_azimuth_zenith(test)\n",
+    "X, y = train.drop(['pm2_5'], axis=1), train['pm2_5']"
    ],
    "id": "c852fd48eaca68bd",
    "outputs": [],
@@ -335,7 +344,7 @@
     "    indexes_to_drop = []\n",
     "    q1, q2 = np.quantile(result, 0.001), np.quantile(result, 0.999)\n",
     "    for i, el in enumerate(result):\n",
-    "        if q1 <= el >= q2:\n",
+    "        if q1 < el > q2:\n",
     "            indexes_to_drop.append(i)\n",
     "    X.drop(indexes_to_drop, inplace=True)\n",
     "    y.drop(indexes_to_drop, inplace=True)\n",
@@ -343,7 +352,7 @@
     "    y.reset_index(drop=True, inplace=True)\n",
     "\n",
     "\n",
-    "del_outliers()\n",
+    "# del_outliers()\n",
     "\n",
     "X.info()"
    ],
@@ -442,11 +451,12 @@
     "from sklearn.compose import make_column_transformer\n",
     "\n",
     "# Bez kategorycznych\n",
-    "# scale_columns = X.columns.difference(['hour', 'month', 'day'])\n",
+    "# categorical = ['hour', 'month', 'dayofweek', 'site_id']\n",
+    "# scale_columns = X.columns.difference(categorical)\n",
     "# \n",
     "# scaler = make_column_transformer((StandardScaler(), scale_columns))\n",
     "# \n",
-    "# X_cat, test_cat = X[['hour', 'month', 'day']], test[['hour', 'month', 'day']]\n",
+    "# X_cat, test_cat = X[categorical], test[categorical]\n",
     "# \n",
     "# X = pd.concat([pd.DataFrame(scaler.fit_transform(X[scale_columns]), columns=scaler.feature_names_in_), X_cat], axis=1)\n",
     "# test = pd.concat([pd.DataFrame(scaler.transform(test[scale_columns]), columns=scaler.feature_names_in_), test_cat], axis=1)\n",
@@ -454,8 +464,8 @@
     "scaler = StandardScaler()\n",
     "\n",
     "X = scaler.fit_transform(X, y)\n",
-    "X = pd.DataFrame(X, columns=scaler.feature_names_in_)\n",
-    "test = scaler.transform(test)"
+    "test = scaler.transform(test)\n",
+    "X, test = pd.DataFrame(X, columns=scaler.feature_names_in_), pd.DataFrame(test, columns=scaler.feature_names_in_)"
    ],
    "id": "376c12ae9287f590",
    "outputs": [],
@@ -533,14 +543,14 @@
     "    params = {\n",
     "        'objective': 'root_mean_squared_error',\n",
     "        'boosting_type': 'gbdt',\n",
-    "        'num_leaves': trial.suggest_int('num_leaves', 2, 50),\n",
+    "        'num_leaves': trial.suggest_int('num_leaves', 20, 100),\n",
     "        'max_depth': trial.suggest_int('max_depth', 10, 17),\n",
     "        'learning_rate': trial.suggest_float('learning_rate', 8e-3, 5e-2, log=True),\n",
     "        'n_estimators': trial.suggest_int('n_estimators', 900, 1100),\n",
     "        'tree_learner': 'voting',\n",
-    "        'bagging_fraction': trial.suggest_float('bagging_fraction', 0.5, 0.9),\n",
+    "        'bagging_fraction': trial.suggest_float('bagging_fraction', 0.7, 0.9),\n",
     "        'subsample': trial.suggest_float('subsample', 0.5, 1),\n",
-    "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.3, 1),\n",
+    "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.8, 1, log=True),\n",
     "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 150),\n",
     "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-4, 1, log=True),\n",
     "        'bagging_freq': 1,\n",
@@ -598,11 +608,15 @@
     "           'objective': 'root_mean_squared_error',\n",
     "            'boosting_type': 'gbdt',\n",
     "           }\n",
-    "# lgbm = lgb.LGBMRegressor(**params_12)\n",
+    "# best_lgbm = lgb.LGBMRegressor(**params_12)\n",
+    "# best_lgbm.fit(X, y)\n",
+    "# best_lgbm_pred = best_lgbm.predict(X_test)\n",
+    "\n",
     "lgbm = define_lightgbm_model(study_lightgbm.best_trial)\n",
     "lgbm.fit(X_train, y_train)\n",
     "lightgbm_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf', 'bagging_fraction']\n",
-    "root_mean_squared_error(y_test, lgbm.predict(X_test))"
+    "lgb_pred = lgbm.predict(X_test)\n",
+    "root_mean_squared_error(y_test, lgb_pred)"
    ],
    "id": "d068d85105ef8d8",
    "outputs": [],
@@ -623,14 +637,16 @@
     "def define_xgb_model(trial):\n",
     "    params = {\n",
     "        'objective': 'reg:squarederror',\n",
-    "        'n_estimators': trial.suggest_int('n_estimators', 500, 1000),\n",
-    "        'subsample': trial.suggest_float('subsample', 0.6, 0.9, log=True),\n",
+    "        'n_estimators': trial.suggest_int('n_estimators', 750, 1100),\n",
+    "        'subsample': trial.suggest_float('subsample', 0.1, 0.6, log=True),\n",
     "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-4, 1, log=True),\n",
-    "        'eta': trial.suggest_float('eta', 1e-3, 1e-1, log=True),\n",
-    "        'max_depth': trial.suggest_int('max_depth', 6, 15),\n",
-    "        'colsample_bytree': trial.suggest_float('colsample_bytree', 1e-3, 1, log=True),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 1, log=True),\n",
+    "        'max_depth': trial.suggest_int('max_depth', 6, 10),\n",
+    "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.1, 1, log=True),\n",
+    "        'tree_method': trial.suggest_categorical('tree_method', ['hist', 'approx']),\n",
     "        'verbosity': 0,\n",
-    "        'nthread': -1\n",
+    "        'enable_categorical': True,\n",
+    "        'n_jobs': -1\n",
     "    }\n",
     "    return xgb.XGBRegressor(**params)\n",
     "\n",
@@ -647,7 +663,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "study_xgboost = optuna.create_study(direction='minimize', study_name='AirQualityWithXGBoost', sampler=optuna.samplers.CmaEsSampler())\n",
+    "study_xgboost = optuna.create_study(direction='minimize', study_name='AirQualityWithXGBoost', sampler=optuna.samplers.TPESampler())\n",
     "study_xgboost.optimize(objective_xgb, n_trials=100)"
    ],
    "id": "dec6fe41d008823",
@@ -667,12 +683,19 @@
     "xgbm = define_xgb_model(study_xgboost.best_trial)\n",
     "\n",
     "xgbm.fit(X_train, y_train)\n",
-    "xgboost_params = ['n_estimators', 'subsample', 'reg_lambda', 'eta', 'max_depth', 'colsample_bytree']\n",
-    "root_mean_squared_error(y_test, xgbm.predict(X_test))"
+    "xgboost_params = ['n_estimators', 'subsample', 'reg_lambda', 'learning_rate', 'max_depth', 'colsample_bytree']\n",
+    "xgb_pred = xgbm.predict(X_test)\n",
+    "root_mean_squared_error(y_test, xgb_pred)"
    ],
    "id": "7014455ebd0fe1fb",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### <center>Optuna + MLPRegressor</center>",
+   "id": "1229658b4e162e1b"
   },
   {
    "metadata": {},
@@ -692,7 +715,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": "optuna.visualization.plot_optimization_history(study_xgboost)",
-   "id": "6c46095f2acaab38",
+   "id": "ed886166b97ec4ab",
    "outputs": [],
    "execution_count": null
   },
@@ -801,8 +824,7 @@
    "cell_type": "code",
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "X_data = np.column_stack((lgbm.predict(X_test), xgbm.predict(X_test)))\n",
+    "X_data = np.column_stack((lgb_pred, xgb_pred))\n",
     "\n",
     "meta_model = LinearRegression()\n",
     "meta_model.fit(X_data, y_test)\n",
@@ -812,6 +834,14 @@
     "X_final_test = np.column_stack((lgbm_final, xgbm_final))"
    ],
    "id": "407b4556b6d8c01",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "X_data",
+   "id": "835188e4844bb2ec",
    "outputs": [],
    "execution_count": null
   },
