--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "X, y = train.drop(columns=['pm2_5'], axis=1), train['pm2_5']\n",
     "test_ids = test['id']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=4)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=4)\n",
     "X_train = pd.DataFrame(X_train, columns=X.columns)\n",
     "X_test = pd.DataFrame(X_test, columns=X.columns)"
    ],
@@ -236,7 +236,10 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "save_to_csv(xgb_model.predict(test), 'xgb.csv')",
+   "source": [
+    "save_to_csv(xgb_model.predict(test), 'xgb.csv')\n",
+    "save_to_csv(xgb_pred, 'xgb_pred.csv')"
+   ],
    "id": "b7a8d818cd8003e7"
   }
  ],
