--- a/models.ipynb
+++ b/models.ipynb
@@ -22,7 +22,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import os"
    ],
    "metadata": {
     "collapsed": false
@@ -41,8 +42,8 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "train = pd.read_csv('transform\\\\train.csv')\n",
-    "test = pd.read_csv('transform\\\\test.csv')"
+    "train = pd.read_csv(os.path.join('transform', 'train.csv'))\n",
+    "test = pd.read_csv(os.path.join('transform', 'test.csv'))"
    ],
    "id": "f107fc3c0f7b0c0e",
    "outputs": [],
@@ -81,14 +82,11 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import os\n",
-    "\n",
-    "\n",
     "def save_to_csv(y_pred, save_as):\n",
     "    if 'result' not in os.listdir(os.getcwd()):\n",
     "        os.mkdir('result')\n",
     "    final_df = pd.concat([test_ids, pd.DataFrame.from_dict({'pm2_5': y_pred})], axis=1)\n",
-    "    final_df.to_csv(f'result\\\\{save_as}', index=False)"
+    "    final_df.to_csv(os.path.join('result', save_as), index=False)"
    ],
    "id": "e9d2d344d5d30f55",
    "outputs": [],
@@ -114,8 +112,8 @@
     "        'objective': 'root_mean_squared_error',\n",
     "        'boosting_type': 'gbdt',\n",
     "        'num_leaves': trial.suggest_int('num_leaves', 40, 256),\n",
-    "        'max_depth': trial.suggest_int('max_depth', 5, 15),\n",
-    "        'learning_rate': trial.suggest_float('learning_rate', 1e-4, 1e-1, log=True),\n",
+    "        'max_depth': trial.suggest_int('max_depth', 7, 15),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 1e-1, log=True),\n",
     "        'n_estimators': trial.suggest_int('n_estimators', 900, 1100),\n",
     "        'tree_learner': 'voting',\n",
     "        'subsample': trial.suggest_float('subsample', 0.4, 1.0),\n",
@@ -144,7 +142,7 @@
    "cell_type": "code",
    "source": [
     "study_lightgbm = optuna.create_study(direction='minimize', study_name='AirQualityWithLightGBM', sampler=optuna.samplers.TPESampler())\n",
-    "study_lightgbm.optimize(objective_lightgbm, n_trials=200)"
+    "study_lightgbm.optimize(objective_lightgbm, n_trials=100)"
    ],
    "id": "21e4f067899ca658",
    "outputs": [],
@@ -183,7 +181,7 @@
     "from sklearn.model_selection import LearningCurveDisplay\n",
     "\n",
     "\n",
-    "LearningCurveDisplay.from_estimator(lgb_model, X, y, cv=20, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
+    "LearningCurveDisplay.from_estimator(lgb_model, X, y, cv=5, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
    ],
    "id": "528e272d6b0016a0",
    "outputs": [],
@@ -326,8 +324,156 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "import xgboost as xgb\n",
+    "import optuna\n",
+    "from sklearn.metrics import root_mean_squared_error\n",
+    "\n",
+    "\n",
+    "def define_xgb_model(trial):\n",
+    "    params = {\n",
+    "        'objective': 'reg:squarederror',\n",
+    "        'n_estimators': trial.suggest_int('n_estimators', 750, 1100),\n",
+    "        'subsample': trial.suggest_float('subsample', 0.1, 0.6, log=True),\n",
+    "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-4, 1, log=True),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 1, log=True),\n",
+    "        'max_depth': trial.suggest_int('max_depth', 6, 10),\n",
+    "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.1, 1, log=True),\n",
+    "        'tree_method': 'hist',\n",
+    "        'verbosity': 0,\n",
+    "        'enable_categorical': True,\n",
+    "        'n_jobs': -1,\n",
+    "        'device': 'cuda'\n",
+    "    }\n",
+    "    return xgb.XGBRegressor(**params)\n",
+    "\n",
+    "def objective_xgb(trial):\n",
+    "    model = define_xgb_model(trial)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    return root_mean_squared_error(y_test, model.predict(X_test))"
+   ],
    "id": "1c600a7c761cd5d5",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "study_xgboost = optuna.create_study(direction='minimize', study_name='AirQualityWithXGBoost', sampler=optuna.samplers.TPESampler())\n",
+    "study_xgboost.optimize(objective_xgb, n_trials=100)"
+   ],
+   "id": "67783466ebd7e557",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Zdefiniowanie najlepszego XGBoost",
+   "id": "e675005b106df480"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "xgb_model = define_xgb_model(study_xgboost.best_trial)\n",
+    "\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "xgboost_params = ['n_estimators', 'subsample', 'reg_lambda', 'learning_rate', 'max_depth', 'colsample_bytree']\n",
+    "xgb_pred = xgb_model.predict(X_test)\n",
+    "root_mean_squared_error(y_test, xgb_pred)"
+   ],
+   "id": "528b9f11ed9b9079",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Krzywa nauki dla XGBoost",
+   "id": "320049518c8a7eff"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from sklearn.model_selection import LearningCurveDisplay\n",
+    "\n",
+    "\n",
+    "LearningCurveDisplay.from_estimator(xgb_model, X, y, cv=5, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
+   ],
+   "id": "f50472f99612e67c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Wykres przedstawiający każdy <i>trial</i> w procesie nauki",
+   "id": "94aeea36b97d7075"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "optuna.visualization.plot_optimization_history(study_xgboost)",
+   "id": "874d08b1ec57ed14",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Wizualizacja przekroju parametrów",
+   "id": "6cedc41b1e51d92"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "optuna.visualization.plot_slice(study_xgboost, params=xgboost_params)",
+   "id": "9d180a1a7efb53f0",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Wpływ poszczególnych parametrów na proces nauki modelu",
+   "id": "53e11de30ec3ea52"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "optuna.visualization.plot_param_importances(study_xgboost)",
+   "id": "b395fc81efef55f",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Najlepsze parametry",
+   "id": "8466d3f103258c7b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "study_xgboost.best_params",
+   "id": "a0e39eb9edeebe48",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Predykcje XGBoost",
+   "id": "ce7ac8e153b30a57"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "save_to_csv(xgb_model.predict(test.drop(columns='id', axis=1)), 'xgb.csv')",
+   "id": "b514ef9089280b10",
    "outputs": [],
    "execution_count": null
   },
