--- a/transform_train_test.ipynb
+++ b/transform_train_test.ipynb
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import os"
    ],
    "outputs": [],
    "execution_count": null
@@ -25,8 +26,8 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "train = pd.read_csv('data\\\\train.csv')\n",
-    "test = pd.read_csv('data\\\\test.csv')\n",
+    "train = pd.read_csv(os.path.join('data', 'train.csv'))\n",
+    "test = pd.read_csv(os.path.join('data', 'test.csv'))\n",
     "\n",
     "train.info()"
    ],
@@ -310,7 +311,7 @@
    "source": [
     "def del_pm2_5_outliers():\n",
     "    indexes_to_drop = []\n",
-    "    q1, q2 = np.quantile(detect_outliers, 0.01), np.quantile(detect_outliers, 0.975)\n",
+    "    q1, q2 = np.quantile(detect_outliers, 0.01), np.quantile(detect_outliers, 0.94)\n",
     "    for i, el in enumerate(detect_outliers):\n",
     "        if el > q2:\n",
     "            indexes_to_drop.append(i)\n",
@@ -444,13 +445,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import os\n",
-    "\n",
-    "\n",
     "if 'transform' not in os.listdir(os.getcwd()):\n",
     "    os.mkdir('transform')\n",
-    "train.to_csv('transform\\\\train.csv', index=False)\n",
-    "test.to_csv('transform\\\\test.csv', index=False)"
+    "train.to_csv(os.path.join('transform', 'train.csv'), index=False)\n",
+    "test.to_csv(os.path.join('transform', 'test.csv'), index=False)"
    ],
    "id": "6fe27a6a613d3b3a",
    "outputs": [],
