--- a/models.ipynb
+++ b/models.ipynb
@@ -121,8 +121,8 @@
     "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 150),\n",
     "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-5, 10.0, log=True),\n",
     "        'bagging_freq': 1,\n",
-    "        'device': 'cpu',\n",
-    "        'n_jobs': -1,\n",
+    "        'device': 'gpu',\n",
+    "        # 'n_jobs': -1,\n",
     "        'random_state': 4,\n",
     "        'verbosity': -1\n",
     "    }\n",
@@ -310,7 +310,10 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "save_to_csv(lgb_model.predict(test.drop(columns='id', axis=1)), 'lightgbm.csv')",
+   "source": [
+    "lgb_final_pred = lgb_model.predict(test.drop(columns='id', axis=1))\n",
+    "save_to_csv(lgb_final_pred, 'lightgbm.csv')"
+   ],
    "id": "74ce5044d06598de",
    "outputs": [],
    "execution_count": null
@@ -337,12 +340,12 @@
     "        'subsample': trial.suggest_float('subsample', 0.1, 0.6, log=True),\n",
     "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-4, 1, log=True),\n",
     "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 1, log=True),\n",
-    "        'max_depth': trial.suggest_int('max_depth', 6, 10),\n",
+    "        'max_depth': trial.suggest_int('max_depth', 6, 15),\n",
     "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.1, 1, log=True),\n",
     "        'tree_method': 'hist',\n",
     "        'verbosity': 0,\n",
     "        'enable_categorical': True,\n",
-    "        'n_jobs': -1,\n",
+    "        # 'n_jobs': -1,\n",
     "        'device': 'cuda'\n",
     "    }\n",
     "    return xgb.XGBRegressor(**params)\n",
@@ -472,8 +475,47 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "save_to_csv(xgb_model.predict(test.drop(columns='id', axis=1)), 'xgb.csv')",
+   "source": [
+    "xgb_final_pred = xgb_model.predict(test.drop(columns='id', axis=1))\n",
+    "save_to_csv(xgb_final_pred, 'xgb.csv')"
+   ],
    "id": "b514ef9089280b10",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### <center>Stacking</center>",
+   "id": "716721f5dc6a4fc5"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "\n",
+    "X_data = np.concatenate((lgb_pred, xgb_pred), axis=1)\n",
+    "\n",
+    "stack_model = LinearRegression()\n",
+    "stack_model.fit(X_data, y_test)"
+   ],
+   "id": "30036df73ec60e7a",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Ostateczna predykcja",
+   "id": "cf87d1caf7e9c50c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "save_to_csv(stack_model.predict(np.concatenate((lgb_final_pred, xgb_final_pred), axis=1)), 'stack_xgb_lgb.csv')",
+   "id": "9f21846de9642c71",
    "outputs": [],
    "execution_count": null
   },
