--- a/transform_train_test.ipynb
+++ b/transform_train_test.ipynb
@@ -56,7 +56,9 @@
     "def change_date(dataframe):\n",
     "    dataframe['date'] = pd.to_datetime(dataframe['date'])\n",
     "    dataframe['dayofweek'] = dataframe['date'].dt.dayofweek.astype('category')\n",
+    "    dataframe['week'] = dataframe['date'].dt.isocalendar().week.astype('category')\n",
     "    dataframe['month'] = dataframe['month'].astype('category')\n",
+    "    dataframe['quater'] = dataframe['date'].dt.quarter.astype('category')\n",
     "    dataframe['hour'] = dataframe['hour'].astype('category')\n",
     "    return dataframe\n",
     "\n",
@@ -64,6 +66,23 @@
     "train, test = change_date(train), change_date(test)"
    ],
    "id": "8d2c1f67577a7d8e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Wykrs przedstawiający wartość pm2_5 w kolejnych kwartałach roku",
+   "id": "808756317694a80"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "sns.barplot(data=train, x='quater', y='pm2_5')\n",
+    "plt.title('Jakość powietrza w kwartałach')"
+   ],
+   "id": "d9aad1ad215ccd55",
    "outputs": [],
    "execution_count": null
   },
@@ -78,7 +97,7 @@
    "cell_type": "code",
    "source": [
     "sns.lineplot(data=train, x='date', y='pm2_5')\n",
-    "plt.title('Jakość powietrza z podziałem na kraje')"
+    "plt.title('Jakość powietrza w kolejnych dniach')"
    ],
    "id": "edbef352ee06ce32",
    "outputs": [],
@@ -95,7 +114,7 @@
    "cell_type": "code",
    "source": [
     "sns.barplot(data=train, x='hour', y='pm2_5')\n",
-    "plt.title('Jakość powietrza w poszczególnych godzinach z podziałem na kraje')"
+    "plt.title('Jakość powietrza w poszczególnych godzinach')"
    ],
    "id": "bf974b1f6654091f",
    "outputs": [],
@@ -112,7 +131,7 @@
    "cell_type": "code",
    "source": [
     "sns.barplot(data=train, x='dayofweek', y='pm2_5')\n",
-    "plt.title('Jakość powietrza w każdym dniu tygodnia z podziałem na kraje')"
+    "plt.title('Jakość powietrza w każdym dniu tygodnia')"
    ],
    "id": "265fd4ba0d9ddfc1",
    "outputs": [],
@@ -129,7 +148,7 @@
    "cell_type": "code",
    "source": [
     "sns.barplot(data=train, x='month', y='pm2_5')\n",
-    "plt.title('Jakość powietrza w każdym dniu tygodnia z podziałem na kraje')"
+    "plt.title('Jakość powietrza w każdym miesiącu')"
    ],
    "id": "6a91d2e567c5484e",
    "outputs": [],
@@ -144,7 +163,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "sns.heatmap(train[['month', 'dayofweek', 'hour', 'site_latitude', 'site_longitude', 'cloud_surface_albedo', 'pm2_5']].corr(), annot=True, cmap='Greys')",
+   "source": "sns.heatmap(train[['month', 'dayofweek', 'hour', 'site_latitude', 'site_longitude', 'cloud_surface_albedo', 'quater', 'pm2_5']].corr(), annot=True, cmap='Greys')",
    "id": "d38b36ac602de2ef",
    "outputs": [],
    "execution_count": null
@@ -202,7 +221,7 @@
     "\n",
     "def drop_low_correlated_columns_to_pm2_5():\n",
     "    corr = train.corr()['pm2_5'].to_frame()\n",
-    "    return corr[(corr['pm2_5'] < 0.01) & (corr['pm2_5'] > -0.01)].index.values\n",
+    "    return corr[(corr['pm2_5'] < 0.01) & (corr['pm2_5'] > -0.01)].index.to_numpy()\n",
     "\n",
     "def subract_azimuth_zenith(dataframe):\n",
     "    zenith_columns = [zenith for zenith in dataframe.columns if 'zenith' in zenith]\n",
@@ -233,6 +252,7 @@
     "change_to_categorical()\n",
     "# fill_x(), fill_test()\n",
     "to_drop = drop_low_correlated_columns_to_pm2_5()\n",
+    "to_drop = np.concatenate((to_drop, drop_high_correlated_columns()), axis=0)\n",
     "train, test = train.drop(columns=to_drop, axis=1), test.drop(columns=to_drop, axis=1)\n",
     "# train, test = subract_azimuth_zenith(train), subract_azimuth_zenith(test)"
    ],
@@ -311,9 +331,9 @@
    "source": [
     "def del_pm2_5_outliers():\n",
     "    indexes_to_drop = []\n",
-    "    q1, q2 = np.quantile(detect_outliers, 0.01), np.quantile(detect_outliers, 0.94)\n",
+    "    q1, q2 = np.quantile(detect_outliers, 0.01), np.quantile(detect_outliers, 0.95)\n",
     "    for i, el in enumerate(detect_outliers):\n",
-    "        if el > q2:\n",
+    "        if q1 < el > q2:\n",
     "            indexes_to_drop.append(i)\n",
     "    train.drop(indexes_to_drop, inplace=True)\n",
     "    train.reset_index(drop=True, inplace=True)\n",
