nie pamietam jakie zmiany

--- a/models.ipynb
+++ b/models.ipynb
@@ -43,9 +43,20 @@
    "cell_type": "code",
    "source": [
     "train = pd.read_csv(os.path.join('transform', 'train.csv'))\n",
-    "test = pd.read_csv(os.path.join('transform', 'test.csv'))"
+    "test = pd.read_csv(os.path.join('transform', 'test.csv'))\n",
+    "\n",
+    "train[['hour', 'month', 'week']] = train[['hour', 'month', 'week']].astype('category')\n",
+    "test[['hour', 'month', 'week']] = test[['hour', 'month', 'week']].astype('category')"
    ],
    "id": "f107fc3c0f7b0c0e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "test.info()",
+   "id": "b229b0e4b3ef64a9",
    "outputs": [],
    "execution_count": null
   },
@@ -64,7 +75,7 @@
     "\n",
     "X, y = train.drop(columns=['pm2_5'], axis=1), train['pm2_5']\n",
     "test_ids = test['id']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=4)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=4)\n",
     "X_train = pd.DataFrame(X_train, columns=X.columns)\n",
     "X_test = pd.DataFrame(X_test, columns=X.columns)"
    ],
@@ -121,9 +132,9 @@
     "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 150),\n",
     "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-5, 10.0, log=True),\n",
     "        'bagging_freq': 1,\n",
-    "        'device': 'gpu',\n",
-    "        # 'n_jobs': -1,\n",
-    "        'random_state': 4,\n",
+    "        'device': 'cpu',\n",
+    "        'n_jobs': -1,\n",
+    "        'random_state': trial.suggest_int('random_state', 0, 100),\n",
     "        'verbosity': -1\n",
     "    }\n",
     "    return lgb.LGBMRegressor(**params)\n",
@@ -160,7 +171,7 @@
    "source": [
     "lgb_model = define_lightgbm_model(study_lightgbm.best_trial)\n",
     "lgb_model.fit(X_train, y_train)\n",
-    "lightgbm_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf']\n",
+    "lightgbm_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf', 'random_state']\n",
     "lgb_pred = lgb_model.predict(X_test)\n",
     "root_mean_squared_error(y_test, lgb_pred)"
    ],
@@ -181,7 +192,7 @@
     "from sklearn.model_selection import LearningCurveDisplay\n",
     "\n",
     "\n",
-    "LearningCurveDisplay.from_estimator(lgb_model, X, y, cv=5, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
+    "LearningCurveDisplay.from_estimator(lgb_model, X, y, cv=2, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
    ],
    "id": "528e272d6b0016a0",
    "outputs": [],
@@ -329,8 +340,6 @@
    "cell_type": "code",
    "source": [
     "import xgboost as xgb\n",
-    "import optuna\n",
-    "from sklearn.metrics import root_mean_squared_error\n",
     "\n",
     "\n",
     "def define_xgb_model(trial):\n",
@@ -345,7 +354,7 @@
     "        'tree_method': 'hist',\n",
     "        'verbosity': 0,\n",
     "        'enable_categorical': True,\n",
-    "        # 'n_jobs': -1,\n",
+    "        'n_jobs': -1,\n",
     "        'device': 'cuda'\n",
     "    }\n",
     "    return xgb.XGBRegressor(**params)\n",
@@ -490,13 +499,17 @@
    "id": "716721f5dc6a4fc5"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "\n",
-    "X_data = np.concatenate((lgb_pred, xgb_pred), axis=1)\n",
+    "X_data = np.column_stack((lgb_pred, xgb_pred))\n",
     "\n",
     "stack_model = LinearRegression()\n",
     "stack_model.fit(X_data, y_test)"
