--- a/transform_train_test.ipynb
+++ b/transform_train_test.ipynb
@@ -58,7 +58,6 @@
     "    dataframe['dayofweek'] = dataframe['date'].dt.dayofweek.astype('category')\n",
     "    dataframe['week'] = dataframe['date'].dt.isocalendar().week.astype('category')\n",
     "    dataframe['month'] = dataframe['month'].astype('category')\n",
-    "    dataframe['quater'] = dataframe['date'].dt.quarter.astype('category')\n",
     "    dataframe['hour'] = dataframe['hour'].astype('category')\n",
     "    return dataframe\n",
     "\n",
@@ -66,23 +65,6 @@
     "train, test = change_date(train), change_date(test)"
    ],
    "id": "8d2c1f67577a7d8e",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "### Wykrs przedstawiający wartość pm2_5 w kolejnych kwartałach roku",
-   "id": "808756317694a80"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "sns.barplot(data=train, x='quater', y='pm2_5')\n",
-    "plt.title('Jakość powietrza w kwartałach')"
-   ],
-   "id": "d9aad1ad215ccd55",
    "outputs": [],
    "execution_count": null
   },
@@ -163,7 +145,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "sns.heatmap(train[['month', 'dayofweek', 'hour', 'site_latitude', 'site_longitude', 'cloud_surface_albedo', 'quater', 'pm2_5']].corr(), annot=True, cmap='Greys')",
+   "source": "sns.heatmap(train[['month', 'dayofweek', 'hour', 'site_latitude', 'site_longitude', 'cloud_surface_albedo', 'pm2_5']].corr(), annot=True, cmap='Greys')",
    "id": "d38b36ac602de2ef",
    "outputs": [],
    "execution_count": null
@@ -234,12 +216,11 @@
     "    return dataframe\n",
     "\n",
     "def change_to_categorical():\n",
-    "    for column in categorical:\n",
+    "    for column in train.select_dtypes(include=['object']).columns:\n",
     "        train[column] = train[column].astype('category')\n",
     "        test[column] = test[column].astype('category')\n",
     "\n",
     "\n",
-    "categorical = ['hour', 'month', 'dayofweek', 'site_latitude', 'site_longitude']\n",
     "test_ids = test['id']\n",
     "train.drop(columns=['id', 'city', 'country', 'date', 'site_id'], inplace=True)\n",
     "test.drop(columns=['id', 'city', 'country', 'date', 'site_id'], inplace=True)\n",
@@ -249,12 +230,13 @@
     "\n",
     "imputers = [KNNImputer(n_neighbors=15, weights='distance') for _ in range(len(starts_with))]\n",
     "train, test = drop_high_nans(train), drop_high_nans(test)\n",
-    "change_to_categorical()\n",
     "# fill_x(), fill_test()\n",
     "to_drop = drop_low_correlated_columns_to_pm2_5()\n",
     "to_drop = np.concatenate((to_drop, drop_high_correlated_columns()), axis=0)\n",
     "train, test = train.drop(columns=to_drop, axis=1), test.drop(columns=to_drop, axis=1)\n",
-    "# train, test = subract_azimuth_zenith(train), subract_azimuth_zenith(test)"
+    "# train, test = subract_azimuth_zenith(train), subract_azimuth_zenith(test)\n",
+    "change_to_categorical()\n",
+    "categorical = train.select_dtypes(include=['category']).columns.values"
    ],
    "id": "cba91ead48820415",
    "outputs": [],
@@ -331,9 +313,9 @@
    "source": [
     "def del_pm2_5_outliers():\n",
     "    indexes_to_drop = []\n",
-    "    q1, q2 = np.quantile(detect_outliers, 0.01), np.quantile(detect_outliers, 0.95)\n",
+    "    q1, q2 = np.quantile(detect_outliers, 0.01), np.quantile(detect_outliers, 0.955)\n",
     "    for i, el in enumerate(detect_outliers):\n",
-    "        if q1 < el > q2:\n",
+    "        if el > q2:\n",
     "            indexes_to_drop.append(i)\n",
     "    train.drop(indexes_to_drop, inplace=True)\n",
     "    train.reset_index(drop=True, inplace=True)\n",
@@ -434,22 +416,23 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.compose import make_column_transformer\n",
     "\n",
-    "# Bez kategorycznych\n",
-    "# scale_columns = train.columns.difference(categorical)\n",
-    "# \n",
-    "# scaler = make_column_transformer((StandardScaler(), scale_columns))\n",
-    "# \n",
-    "# X_cat, test_cat = train[categorical], test[categorical]\n",
-    "# \n",
-    "# train = pd.concat([pd.DataFrame(scaler.fit_transform(train[scale_columns]), columns=scaler.feature_names_in_), X_cat], axis=1)\n",
-    "# test = pd.concat([pd.DataFrame(scaler.transform(test[scale_columns]), columns=scaler.feature_names_in_), test_cat], axis=1)\n",
-    "# Wszystkie kolumny\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "train['pm2_5'] = train['pm2_5'].apply(lambda x: np.round(x, 3))\n",
     "train_pm2_5 = train['pm2_5']\n",
-    "train, test = scaler.fit_transform(train.drop(columns='pm2_5', axis=1)), scaler.transform(test)\n",
-    "train, test = pd.concat([pd.DataFrame(train, columns=scaler.feature_names_in_), train_pm2_5], axis=1), pd.concat([test_ids, pd.DataFrame(test, columns=scaler.feature_names_in_)], axis=1)"
+    "train.drop(columns=['pm2_5'], inplace=True)\n",
+    "# Bez kategorycznych\n",
+    "scale_columns = train.columns.difference(categorical)\n",
+    "\n",
+    "scaler = make_column_transformer((StandardScaler(), scale_columns))\n",
+    "\n",
+    "train_cat, test_cat = train[categorical], test[categorical]\n",
+    "\n",
+    "train = pd.concat([pd.DataFrame(scaler.fit_transform(train[scale_columns]), columns=scaler.feature_names_in_), train_cat, train_pm2_5], axis=1)\n",
+    "test = pd.concat([test_ids, pd.DataFrame(scaler.transform(test[scale_columns]), columns=scaler.feature_names_in_), test_cat], axis=1)\n",
+    "train = train.round(decimals=3)\n",
+    "# Wszystkie kolumny\n",
+    "# scaler = StandardScaler()\n",
+    "# \n",
+    "# train, test = scaler.fit_transform(train), scaler.transform(test)\n",
+    "# train, test = pd.concat([pd.DataFrame(train, columns=scaler.feature_names_in_), train_pm2_5], axis=1), pd.concat([test_ids, pd.DataFrame(test, columns=scaler.feature_names_in_)], axis=1)"
    ],
    "id": "initial_id",
    "outputs": [],
