--- a/models.ipynb
+++ b/models.ipynb
@@ -127,12 +127,12 @@
     "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 1e-1, log=True),\n",
     "        'n_estimators': trial.suggest_int('n_estimators', 900, 1100),\n",
     "        'tree_learner': 'voting',\n",
-    "        'subsample': trial.suggest_float('subsample', 0.4, 1.0),\n",
-    "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.4, 1.0),\n",
+    "        'subsample': trial.suggest_float('subsample', 0.4, 1.0, log=True),\n",
+    "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.4, 1.0, log=True),\n",
     "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 150),\n",
-    "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-5, 10.0, log=True),\n",
+    "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-5, 1, log=True),\n",
     "        'bagging_freq': 1,\n",
-    "        'device': 'cpu',\n",
+    "        'device': 'cuda',\n",
     "        'n_jobs': -1,\n",
     "        'random_state': trial.suggest_int('random_state', 0, 100),\n",
     "        'verbosity': -1\n",
@@ -192,7 +192,7 @@
     "from sklearn.model_selection import LearningCurveDisplay\n",
     "\n",
     "\n",
-    "LearningCurveDisplay.from_estimator(lgb_model, X, y, cv=2, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
+    "LearningCurveDisplay.from_estimator(lgb_model, X, y, cv=5, n_jobs=-1, random_state=4, scoring='neg_root_mean_squared_error')"
    ],
    "id": "528e272d6b0016a0",
    "outputs": [],
@@ -351,11 +351,11 @@
     "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 1, log=True),\n",
     "        'max_depth': trial.suggest_int('max_depth', 6, 15),\n",
     "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.1, 1, log=True),\n",
-    "        'tree_method': 'hist',\n",
+    "        'tree_method': 'gpu_hist',\n",
     "        'verbosity': 0,\n",
     "        'enable_categorical': True,\n",
-    "        'n_jobs': -1,\n",
-    "        'device': 'cuda'\n",
+    "        'device': 'cuda',\n",
+    "        'n_jobs': -1\n",
     "    }\n",
     "    return xgb.XGBRegressor(**params)\n",
     "\n",
@@ -369,7 +369,11 @@
    "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
    "source": [
     "study_xgboost = optuna.create_study(direction='minimize', study_name='AirQualityWithXGBoost', sampler=optuna.samplers.TPESampler())\n",
@@ -499,20 +503,18 @@
    "id": "716721f5dc6a4fc5"
   },
   {
-   "metadata": {
-    "jupyter": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import StackingRegressor\n",
     "\n",
     "\n",
-    "X_data = np.column_stack((lgb_pred, xgb_pred))\n",
-    "\n",
-    "stack_model = LinearRegression()\n",
-    "stack_model.fit(X_data, y_test)"
+    "stack_model = StackingRegressor(\n",
+    "    estimators=[('LGB', lgb_model), ('XGB', xgb_model)],\n",
+    "    cv=5,\n",
+    "    n_jobs=-1,\n",
+    "    passthrough=False\n",
+    ")"
    ],
    "id": "30036df73ec60e7a",
    "outputs": [],
