--- a/transform_train_test.ipynb
+++ b/transform_train_test.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## <center>Analiza poziomu PM2.5 w afrykańskich miastach</center>\n",
+    "### Zespół:\n",
+    "<ol>\n",
+    "    <li style='font-size: 20px'>Hubert Kłosowski 242424</li>\n",
+    "    <li style='font-size: 20px'>Krzysztof Kolanek 242425</li>\n",
+    "    <li style='font-size: 20px'>Kamil Małecki 242464</li>\n",
+    "</ol>"
+   ],
+   "id": "1f0d1b566e5881dd"
+  },
+  {
    "cell_type": "code",
    "id": "fab525021207f8ad",
    "metadata": {
